--- a/A5/DesignDetails.tex
+++ b/A5/DesignDetails.tex
@@ -26,7 +26,7 @@ The resistor values used should be kept low so that the current flowing through 
 
 \begin{center}
     
-    $\frac{7.2}{R_1+R_2} = 5mA>>$100\textmu A
+    $\frac{7.2}{R_1+R_2} = 6mA>>$100\textmu A
 \end{center}
 Because 5mA is 50 times larger than the maximum, the $I_{adj}$ can be assumed to be negligible as it will have minimal effect on the calculations.
 
@@ -430,7 +430,9 @@ $R_3$ is then chosen to be 100k\textohm. $R_1$ is the calculated to be 22.32k\te
 \end{table}
 
 From table \ref{tab:MCPbat}, all op amps are operating within working ranges.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\section{Ambient light sensor circuitry}
 
 
 
