--- a/A5/frontmatter/nomenclature.tex
+++ b/A5/frontmatter/nomenclature.tex
@@ -98,6 +98,7 @@
     W & Watts\\
     \textdegree C & degrees Celcius.\\
     ADC & Analog to Digital Converter.\\
+    LDR & Light Dependant Resistor\\
     
 \end{tabular}
 \endgroup
