--- a/A5/DesignDetails.tex
+++ b/A5/DesignDetails.tex
@@ -433,6 +433,11 @@ From table \ref{tab:MCPbat}, all op amps are operating within working ranges.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Ambient light sensor circuitry}
+The LDR will be used to produce a voltage that will fall within the boundary of zero to five volts in order to work correctly with an ADC. In direct sunlight the LDR had a resistance of as little as 500\textohm and in complete darkness a resistance of greater than 1M\textohm \ was measured.  To get a voltage between zero and five volts, the voltage from the 5V regulator is divided as \textbf{can be seen in figure \ref{fig:LDR}}. This means that unless the regulator exceeds its values the zero to five volt range of the LDR circuit will not be breached.
+
+\section{LED load control design }
+
+\section{Pilot light control design}
 
 
 
