significant progress on A7 design

--- a/A5/References.bib
+++ b/A5/References.bib
@@ -278,7 +278,12 @@ year = {2015}
 	year = {2018}
 }
 
-
+@misc{SR,
+	author = {{Aruna Rubasinghe}},
+	title = {Use an op amp as a set/reset flip-flop},
+	url = {https://www.edn.com/use-an-op-amp-as-a-set-reset-flip-flop/},
+	year = {2012}
+}
 
 
 
