--- a/A5/DesignDetails.tex
+++ b/A5/DesignDetails.tex
@@ -433,19 +433,20 @@ From table \ref{tab:MCPbat}, all op amps are operating within working ranges.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
 \section{Ambient light sensor circuitry}
-The LDR will be used to produce a voltage that will fall within the boundary of zero to five volts in order to work correctly with an ADC when "measuring" the light. In direct sunlight the LDR had a resistance of as little as 500\textohm and in complete darkness a resistance of greater than 1M\textohm \ was measured.  To get a voltage between zero and five volts, the voltage from the 5V regulator is divided as can be seen in figure \ref{fig:LDR}. This means that unless the regulator exceeds its values the zero to five volt range of the LDR circuit will not be breached. In the labs the highest "light" measured LDR resistance is 15k\textohm. When we are at this point the ADC output is designed to have a voltage of 2.5V. This 2.5V will be used in the next section.
+The LDR will be used to produce a voltage that will fall within the boundary of zero to five volts in order to work correctly with an ADC when "measuring" the light. In direct sunlight the LDR had a resistance of as little as 500\textohm \ and in complete darkness a resistance of greater than 1M\textohm \ was measured.  To get a voltage between zero and five volts, the voltage from the 5V regulator is divided as can be seen in figure \ref{fig:LDR}. This means that unless the regulator exceeds its values the zero to five volt range of the LDR circuit will not be breached. In the labs the highest "light" measured LDR resistance is 15k\textohm. When we are at this point the ADC output is designed to have a voltage of 2.5V. This 2.5V will be used in the next section. As it gets darker the resistance of the LDR will increase and a greater voltage will be across it.
 
 
 \begin{figure}[!htb]
 	\centering
-	\includegraphics[width=0.25\linewidth]{Figures/A7/LDRcirc.png}
+	\includegraphics[width=0.15\linewidth]{Figures/A7/LDRcirc.png}
 	\caption{Light measuring circuit}
 	\label{fig:LDR}
 \end{figure}
 
 \section{LED load control design }
 
-The following design will consist will achieve the output of the Load LED and pilot LED that can be seen in table \ref{tab:truthtab}. This consists of defining a "dark" and "light" point for the LDR in the previous section. This is implemented with non inverting Schmidt trigger. The hysterisis band is designed to be 0.2V around the center voltage of 2.5V defined in the previous section ($V_{TU}$=2.6V ,$V_{TL}$=2.4V ).\textbf{The following equations are derived extensively alongside the used circuit in Appendix C}.
+The following design will consist will achieve the output of the Load LED and pilot LED that can be seen in table \ref{tab:truthtab}.
+ This consists of defining a "dark" and "light" point for the LDR in the previous section. This is implemented with non inverting Schmidt trigger. The hysteresis band is designed to be 0.2V around the centre voltage of 2.5V defined in the previous section ($V_{TU}$=2.6V ,$V_{TL}$=2.4V ).When it is dark enough the voltage across the LDR will be greater than 2.6V and the trigger will output five volts. \textbf{The following equations are derived extensively alongside the used circuit in Appendix C}.
 
 \begin{center}
 	$\frac{V_{TU}-V_{TL}}{(V_{H}-V_L)}=\frac{R_1}{R_2}$  
@@ -455,18 +456,28 @@ The following design will consist will achieve the output of the Load LED and pi
 	
 	$	V_{REF}=\frac{V_{TL}\times (R_2)}{R_1+R_2}+\frac{V_{H}\times R_1}{R_1+R_2}$
 \end{center}
-Using the above equations for $V_H=5$ and $V_L=0$ ,$\frac{R_1}{R_2}=\frac{1}{25}$. With $R_2$ chosen as 12k\textohm \ $R_1$ can will be 300k\textohm 
+Using the above equations for $V_H=5$ and $V_L=0$ ,$\frac{R_1}{R_2}=\frac{1}{25}$. With $R_2$ chosen as 12k\textohm ($R_1$ in figure \ref{fig:loadcont})\ $R_1$ will be 300k\textohm \ ($R_2+R_8$ in figure \ref{fig:loadcont}). $V_{REF}$ is then calculated to be 2.5V (5V voltage divided with $R_3$ and $R_4$ in figure \ref{fig:loadcont}).
 
-To achieve the one \textbf{on} condition for the load LED in table \ref{tab:truthtab} the \textbf{light condition} is "anded" with the load control as well as the PWM signals  
+To achieve the one \textbf{on} condition for the load LED in table \ref{tab:truthtab} the \textbf{light condition} is sent to an NMOS gate that is in series with the lowside switch from section \ref{sec:loswide}. This then requires the "light condition" \textbf{and} load control to be high for current to flow through the load. The same concept is applied for the PWM signal. This can be seen in the load control part of figure \ref{fig:loadcont}.
+ A momentary switch is implemented by using a op amp sr-latch \cite{difAmp}. The output of the SR latch is connected to the same output as the load control from section \ref{sec:loswide}. Diodes are connected between the two signals to prevent interference with the sr-latch This enables either the momentary switch or the beetle load control to enable the load control Mosfet, but current will only flow through the load if \textbf{light condtion} and PWM are also high. 
 
+
+
+\begin{figure}[!htb]
+	\centering
+	\includegraphics[width=1\linewidth]{Figures/A7/loadcont.png}
+	\caption{Light condition and Load Control circuit}
+	\label{fig:loadcont}
+\end{figure}
 
 \begin{table}[!htb]
 	\centering
 	\footnotesize
-	\caption[Truth table of load control]{Truth table of load control}
+	\caption[Truth table of pilot \& load control]{Truth table of pilot \& load control}
 	\begin{tabular}{lrrrr}
 		\toprule
-		$PWM$&$beatle oad Control$&$Light Condition$&$Load LED$&$Pilot LED$\\
+		$PWM$&$beetle oad Control$&$Light Condition$&$Load LED$&$Pilot LED$\\
+		
 		&[0-off/1-on]&[0-Light/1-Dark]&[0-off/1-on]&[0-off/1-on]&[0-off/1-on]\\
 		\midrule
 		1&0&0&0&0\\
@@ -478,15 +489,17 @@ To achieve the one \textbf{on} condition for the load LED in table \ref{tab:trut
 	\label{tab:truthtab}
 \end{table}
 
-\begin{figure}[!htb]
-	\centering
-	\includegraphics[width=0.38\linewidth]{Figures/A7/lightcondcirc.png}
-	\caption{Light condition circuit}
-	\label{fig:LDR}
-\end{figure}
+
 
 \subsection{Pilot light control design}
 
+
+\begin{figure}[!htb]
+	\centering
+	\includegraphics[width=0.45\linewidth]{Figures/A7/pilotLED.png}
+	\caption{Pilot LED circuit}
+	\label{fig:pilot}
+\end{figure}
 
 
 
