--- a/A5/References.bib
+++ b/A5/References.bib
@@ -278,12 +278,15 @@ year = {2015}
 	year = {2018}
 }
 
-@misc{SR,
+
+@misc{SR2,
 	author = {{Aruna Rubasinghe}},
 	title = {Use an op amp as a set/reset flip-flop},
 	url = {https://www.edn.com/use-an-op-amp-as-a-set-reset-flip-flop/},
 	year = {2012}
 }
+
+
 
 
 
