results in progress A7

--- a/A5/DesignDetails.tex
+++ b/A5/DesignDetails.tex
@@ -432,7 +432,7 @@ $R_3$ is then chosen to be 100k\textohm. $R_1$ is the calculated to be 22.32k\te
 From table \ref{tab:MCPbat}, all op amps are operating within working ranges.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
-\section{Ambient light sensor circuitry}
+\section{Ambient light sensor}
 The LDR will be used to produce a voltage that will fall within the boundary of zero to five volts in order to work correctly with an ADC when "measuring" the light. In direct sunlight the LDR had a resistance of as little as 500\textohm \ and in complete darkness a resistance of greater than 1M\textohm \ was measured.  To get a voltage between zero and five volts, the voltage from the 5V regulator is divided as can be seen in figure \ref{fig:LDR}. This means that unless the regulator exceeds its values the zero to five volt range of the LDR circuit will not be breached. In the labs the highest "light" measured LDR resistance is 15k\textohm. When we are at this point the ADC output is designed to have a voltage of 2.5V. This 2.5V will be used in the next section. As it gets darker the resistance and the voltage across the LDR will increase.
 
 
@@ -443,7 +443,7 @@ The LDR will be used to produce a voltage that will fall within the boundary of 
 	\label{fig:LDR}
 \end{figure}
 
-\section{LED load control design }
+\section{LED load control}
 
 The following design will consist will achieve the output of the Load LED and pilot LED that can be seen in table \ref{tab:truthtab}.
  This consists of defining a "dark" and "light" point for the LDR in the previous section. This is implemented with non inverting Schmidt trigger. The hysteresis band is designed to be 0.2V around the centre voltage of 2.5V defined in the previous section ($V_{TU}$=2.6V ,$V_{TL}$=2.4V ).When it is dark enough the voltage across the LDR will be greater than 2.6V and the trigger will output five volts. \textbf{The following equations are derived extensively alongside the used circuit in Appendix C}.
