--- a/A5/SystemResults.tex
+++ b/A5/SystemResults.tex
@@ -34,11 +34,11 @@ With the circuit built up until this stage it was deemed necessary to recheck th
 	\caption{Hysteresis Measurement}
 	\begin{tabular}{lrrrr}
 		\toprule
-		& $Voltage$ \\
-		&  [V] \\
+		& $MeasuredVoltage$&$ExpectedVoltage$ \\
+		&  [V]&  [V] \\
 		\midrule
-		$V_{TU}$      & 6.22  \\
-		$V_{TL}$     & 6.02\\
+		$V_{TU}$      & 6.22&6.20  \\
+		$V_{TL}$     & 6.02&6.00\\
 		
 		\bottomrule
 	\end{tabular}
